--- a/client/android/whatshappening/res/layout/activity_main.xml
+++ b/client/android/whatshappening/res/layout/activity_main.xml
@@ -7,8 +7,13 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
+        android:id="@+id/main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    
+    <Button android:id="@+id/list_button"
+        android:text="@string/list_last_100_upload"
+        android:onClick="sendMessage"/>
 
 </RelativeLayout>
