--- a/client/android/whatshappening/res/layout/activity_main.xml
+++ b/client/android/whatshappening/res/layout/activity_main.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
     
-    <Button android:id="@+id/list_button"
-        android:text="@string/list_last_100_upload"
-        android:onClick="sendMessage"/>
-
+    <Button
+        android:id="@+id/list_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/list_last_100_upload" />
 </RelativeLayout>
